force-app/main/default/objects/Relationships__c/Relationships__c.object-meta.xml
<CustomObject>
    <label>Relationship</label>
    <nameField>
        <label>Relationships Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>