force-app/main/default/objects/Relationships__c/fields/Invoice_Recipient__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Recipient__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invoice Recipient</label>
    <type>Checkbox</type>
</CustomField>