force-app/main/default/objects/Relationships__c/fields/Primary_Contact_Account__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Automation will populate this field based on the Primary Contact</inlineHelpText>
    <label>Primary Contact Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Relationships</relationshipLabel>
    <relationshipName>Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>