force-app/main/default/objects/Relationships__c/fields/Professional_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Professional_Relationship__c</fullName>
    <label>Professional Relationship</label>
    <type>TextArea</type>
</CustomField>