force-app/main/default/objects/Relationships__c/fields/Related_Contact_Account__c.field-meta.xml
<CustomField>
    <fullName>Related_Contact_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Automation will populate this field based on the Related Contact</inlineHelpText>
    <label>Related Contact Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Relationships (Related Contact Account)</relationshipLabel>
    <relationshipName>Relationships1</relationshipName>
    <type>Lookup</type>
</CustomField>