force-app/main/default/objects/Relationships__c/fields/Related_Contact_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Related_Contact_Account_ID__c</fullName>
    <formula>RelatedContact__r.AccountId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Contact Account ID</label>
    <type>Text</type>
</CustomField>