force-app/main/default/objects/Relationships__c/fields/RelatedContact__c.field-meta.xml
<CustomField>
    <fullName>RelatedContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Relationships (RelatedContact)</relationshipLabel>
    <relationshipName>Relationships1</relationshipName>
    <type>Lookup</type>
</CustomField>