force-app/main/default/objects/Relationships__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <inlineHelpText>When the Role is changed to REP1 or AltRep1, the Primary Rep or the Alternate Rep on the Trust referenced on this Relationship record will be updated..</inlineHelpText>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AltRep1</fullName>
            </value>
            <value>
                <fullName>Attorney</fullName>
            </value>
            <value>
                <fullName>Caregiver</fullName>
            </value>
            <value>
                <fullName>Grantor</fullName>
            </value>
            <value>
                <fullName>Guardian</fullName>
            </value>
            <value>
                <fullName>POA</fullName>
            </value>
            <value>
                <fullName>Remainder Person</fullName>
            </value>
            <value>
                <fullName>REP1</fullName>
            </value>
            <value>
                <fullName>Rep Payee</fullName>
            </value>
            <value>
                <fullName>AltRep2</fullName>
                <isActive>false</isActive>
                <label>AltRep2</label>
            </value>
            <value>
                <fullName>Family Member</fullName>
                <isActive>false</isActive>
                <label>Family Member</label>
            </value>
            <value>
                <fullName>Friend</fullName>
                <isActive>false</isActive>
                <label>Friend</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>