force-app/main/default/objects/Relationships__c/fields/Trust_Primary_Rep__c.field-meta.xml
<CustomField>
    <fullName>Trust_Primary_Rep__c</fullName>
    <formula>Trust__r.Primary_Representative_Contact__r.Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trust Primary Rep</label>
    <type>Text</type>
</CustomField>