force-app/main/default/objects/Relationships__c/fields/Trust_Status__c.field-meta.xml
<CustomField>
    <fullName>Trust_Status__c</fullName>
    <formula>TEXT(Trust__r.Trust_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trust Status</label>
    <type>Text</type>
</CustomField>