force-app/main/default/objects/Relationships__c/fields/X18_Digit_Related_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>X18_Digit_Related_Contact_ID__c</fullName>
    <formula>CASESAFEID(RelatedContact__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>18 Digit Related Contact ID</label>
    <type>Text</type>
</CustomField>