force-app/main/default/objects/Relationships__c/fields/X18_Digit_Relationship_ID__c.field-meta.xml
<CustomField>
    <fullName>X18_Digit_Relationship_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>18 Digit Relationship ID</label>
    <type>Text</type>
</CustomField>