force-app/main/default/objects/Relationships__c/fields/XRelationship__c.field-meta.xml
<CustomField>
    <fullName>XRelationship__c</fullName>
    <label>XRelationship</label>
    <length>50</length>
    <type>Text</type>
</CustomField>